# tdctf

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  coding-norms.md  compile_flags.txt  context-preservation.md  design.md
.github/workflows/: pages.yml
ai-instructions/: coding-norms.md  context-preservation.md
data/: creep_upgrades.cfg  map.cfg  towers.cfg
docs/: example-fun-scenarios.md  game-design.md  ideas.md  lore.md  tech-design.md
docs/ai-instructions/: coding-norms.md
docs/what-was-vibed/: 2026-05-18_14-50_creep-pathing-aligned-with-design-doc.md  2026-05-18_15-00_test-infrastructure-for-creep-pathing.md  20260518004-framerate-and-lag-counter.md  20260518005-single-file-html-build.md  20260519001-baseline-test-coverage.md  20260519002-coding-norms-testing-clarifications.md  20260519003-unified-pathing-loop-and-layered-tests.md  20260520001-shortest-path-replaces-demarcated-line.md  20260520002-spawn-direction-arrow.md  20260520003-tower-config-file.md  20260520004-data-driven-towers.md  20260520005-decouple-tests-from-shipped-cfg.md  20260520006-clion-indexing-cmakelists.md  20260520006-clion-indexing-compile-flags.md  20260520007-spawn-marker-non-directional.md  20260520008-creep-upgrades-config-file.md  20260520009-creep-types-data-driven.md  20260520010-dynamic-upgrade-buttons.md  20260520011-creep-upgrade-button-shows-turn-count.md  20260523005-fog-of-war.md  (+26 more)
tests/: test_creep_config.c  test_fixtures.h  test_game.c  test_map_config.c  test_pathing.c  test_render.c  test_snapshot.c  test_tower_config.c
what-was-vibed/: mvp-design.md
(+14 files in other folders)
